--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,10 @@ h3 {
     justify-content: space-evenly
 }
 
+.navbar-toggler {
+    height: 5%;
+    width: 30%;
+}
 
 /* Agrego Imagenes/altura de mis imagenes de los productos de mi seccion */
 
@@ -84,16 +88,16 @@ h3 {
 .categoria img {
     padding: 2rem;
 
-    width: 300px;
+    width: 100%p;
 }
 
 .categoria {
 
     border: 2px;
-    width: 400px;
-    height: 530px;
+    width: 100%;
+    height: 50%;
 
-    border-radius: 100px;
+    border-radius: 50%;
 
     font-size: 1, 8rem;
 
@@ -144,8 +148,8 @@ h3 {
         padding: 2rem;
         gap: 1rem;
 
-        height: 300px;
-        width: 90px;
+        height: 100%;
+        width: 100%;
         display: flex;
         justify-content: space-evenly;
         align-items: center
@@ -157,8 +161,8 @@ h3 {
     .video-producto {
 
 
-        height: 300px;
-        width: 1200px;
+        height: 100%;
+        width: 100%;
         display: flex;
         justify-content: space-evenly;
         align-items: center
@@ -178,8 +182,8 @@ h3 {
     margin-top: 100px;
     background-color: black;
     color: aliceblue;
-    width: 1500px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
 
 
 
@@ -206,13 +210,13 @@ h3 {
 
 }
 
-@media (min-width:1024px) {
+@media (min-width:420px) {
 
     .footer-decojunco {
         display: grid;
 
-        height: 250px;
-        width: 1400px;
+        height: 100%;
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: s;
@@ -247,7 +251,7 @@ h3 {
 
 .conteiner-secciones img {
     width: 95%;
-    height: 400px;
+    height: 100%;
 
     object-fit: cover;
 
