--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ a {
     color: white;
 }
 
+
+
 /* -------EMPIEZO CON EL HEADER----- */
 
 /* voy a darle espacio a la barra de navegacion */
@@ -138,6 +140,11 @@ h3 {
 
 /* EMPIEZA LA REMODELACION DEL VIDEO */
 
+.carousel {
+
+    width: 100%;
+}
+
 @media (min-width:370px) {
     .video-producto {
 
@@ -170,6 +177,28 @@ h3 {
 
 }
 
+
+/* EMPIEZA LA REMODELACION DEL GRID 4 COLUMNAS DEL BODY*/
+.grid-container {
+    display: grid;
+    grid-template-columns:  repeat(2, 1fr) ;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+    margin-top: 7%;
+  }
+  
+  .grid-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: lightgray;
+    padding: 20px;
+    transition: transform 0.3s;
+  }
+  
+  .grid-item:hover {
+    transform: scale(1.2);
+  }
 
 
 .footer-decojunco {
