--- a/css/style.css
+++ b/css/style.css
@@ -137,20 +137,20 @@ h3 {
 }
 
 
-/* EMPIEZA LA REMODELACION DEL GRID 4 COLUMNAS DEL BODY*/
+/* EMPIEZA LA REMODELACION DEL GRID  COLUMNAS DEL BODY*/
 .grid-container {
     display: grid;
-    grid-template-columns:  40% 40%  ;
-    grid-template-rows: 40% 40% ;
+    grid-template-columns: 40% 40%;
+    grid-template-rows: 40% 40%;
     justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
-     gap: 20px;
+    gap: 20px;
     margin-top: 7%;
-  }
+}
 
-   .grid-item {
+.grid-item {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -158,67 +158,77 @@ h3 {
     padding: 30px;
     transition: transform 0.3s;
 
+
+}
+
+.grid-item:hover {
+    transform: scale(1.2);
+}
+
+/* EMPIEZA LA REMODELACION DE LOS PRODUCTOS DE MI INICIO*/
+
+@media (min-width:350px) {
+    .imagen-tarjeta{
+        width: 18rem;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        margin: 10%;
+        gap: 5%;
+    }
+
+}
+
+
+
    
+/* EMPIEZA LA REMODELACION DE MI FOOTER*/
+
+footer {
+    background-color: #f2f2f2;
+    padding: 20px;
   }
   
-  .grid-item:hover {
-    transform: scale(1.2);
+  .footer-content {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    text-align: center;
+  }
+  
+  .social-media {
+    height: 15%;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+  }
+  
+  
+  @media (min-width: 370px) {
+    .footer-content {
+      grid-template-columns: 1fr;
+    }
+  }
+  
+  @media (min-width: 500px) {
+    .footer-content {
+      grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+    }
+  }
+  
+  @media (min-width: 1500px) {
+    .footer-content {
+      grid-template-columns: 1fr;
+    }
   }
 
- /* EMPIEZA LA REMODELACION DE LOS PRODUCTOS DE MI INICIO*/
- 
-
-.footer-decojunco {
-
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 110%;
 
 
-    padding: 30px;
-    margin-top: 100px;
-    background-color: black;
-    color: aliceblue;
-    width: 100%;
-    height: 100%;
-
-
-
-
-    border-style: solid;
-    border-width: 0.1px;
-    border-color: black;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly
-}
-
-@media (min-width:370px) {
-
-    .footer-decojunco {
-        display: grid;
-
-        height: 300px;
-        width: 400px;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1;
-    }
-
-}
-
-@media (min-width:420px) {
-
-    .footer-decojunco {
-        display: grid;
-
-        height: 100%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: s;
-    }
-
-}
 
 .navbar-brand {
     justify-content: start;
@@ -268,7 +278,6 @@ h3 {
     display: flex;
     align-items: center;
     justify-content: space-evenly
-    
 }
 
 .card-title {
@@ -288,14 +297,15 @@ h3 {
     font-size: 20px;
 }
 
-.form-control{
+.form-control {
     border-color: chocolate;
-   font-family: 'Times New Roman', Times, serif;
-   font-size: 150%;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 150%;
 }
-    
+
 .input-group-text {
     border-color: chocolate;
-   font-family: 'Times New Roman', Times, serif;
-   font-size: 150%;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 150%;
 }
+
