--- a/css/style.css
+++ b/css/style.css
@@ -205,11 +205,16 @@ h3 {
 
 
    
+/* EMPIEZA LA REMODELACION DE MI BODY*/
+
+
+
 /* EMPIEZA LA REMODELACION DE MI FOOTER*/
 
 footer {
     background-color: #f2f2f2;
     padding: 20px;
+   
   }
   
   .footer-content {
@@ -308,5 +313,13 @@ footer {
     border-color: chocolate;
     font-family: 'Times New Roman', Times, serif;
     font-size: 150%;
+    width: 100%;
 }
 
+/* remodelacion quienes somos/formulario*/
+
+.formulario {
+    
+    width: 100%;
+    
+}
