--- a/css/style.css
+++ b/css/style.css
@@ -313,13 +313,15 @@ footer {
     border-color: chocolate;
     font-family: 'Times New Roman', Times, serif;
     font-size: 150%;
-    width: 100%;
+    height: 20%;
+    padding: 2rem;
 }
 
-/* remodelacion quienes somos/formulario*/
+/* remodelacion quienes somos/formulario y contacto */
 
 .formulario {
+    width: 60%;
+    padding: 2rem;
     
-    width: 100%;
     
 }
