--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,31 @@ footer {
 .formulario {
     width: 60%;
     padding: 2rem;
-    
-    
 }
+
+/* remodelacion  contacto */
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+    grid-gap: 20px;
+    height: 400px;
+  }
+
+
+  .map {
+    grid-column: 1 / 3;
+    height: 100%;
+  }
+
+
+  .address {
+    font-size: 18px;
+    text-align: center;
+  }
+
+
+  @media (min-width: 470px) {
+    .container {
+      grid-template-columns: repeat(auto-fit, minmax(470px, 1fr));
+    }
+  }
