--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,9 @@ footer {
 }
 
 /* remodelacion  contacto */
-.container {
+
+
+.ubicacion {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
     grid-gap: 20px;
@@ -333,15 +335,10 @@ footer {
   }
 
 
-  .map {
-    grid-column: 1 / 3;
-    height: 100%;
-  }
 
-
-  .address {
-    font-size: 18px;
-    text-align: center;
+  .mapa img {
+    height: 80%;
+    width: 60%;
   }
 
 
