--- a/css/styles.css
+++ b/css/styles.css
@@ -1,259 +1,18 @@
-@charset "UTF-8";
-/* saco los margenes */
-* {
-  margin: 0;
-  padding: 0;
-}
+/* Error: Undefined variable.
+ *    ,
+ * 22 |     font-family: $off-serif;
+ *    |                  ^^^^^^^^^^
+ *    '
+ *   scss\pages\_productos.scss 22:18  @import
+ *   scss\main.scss 8:9                root stylesheet */
 
-/* cambio la tipografia y el tamaño de el titulo principal de la barra de navegacion */
-h1 {
-  font-family: "Franklin Gothic Medium', 'Arial Narrow", Arial, sans-serif;
-  font-size: 250%;
-  color: white;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a    \2577 \a 22 \2502      font-family: $off-serif;\d\a    \2502                   ^^^^^^^^^^\a    \2575 \a   scss\\pages\\_productos.scss 22:18  @import\a   scss\\main.scss 8:9                root stylesheet";
 }
-
-img {
-  width: 100%;
-}
-
-/* saco de las listas los puntos de la derecha */
-ul,
-ol {
-  list-style: none;
-}
-
-/* saco las lineas del texto  y le agrego color a la letra*/
-a {
-  text-decoration: none;
-  color: white;
-}
-
-/* CAMBIO DE ESTILO/ALTURA DE MI H2 */
-h2 {
-  font-family: "Franklin Gothic Medium', 'Arial Narrow", Arial, sans-serif;
-  font-size: 200%;
-  padding: 3rem;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-/* diseño de mi h3 */
-h3 {
-  font-family: "Franklin Gothic Medium', 'Arial Narrow", Arial, sans-serif;
-  font-size: 200%;
-  padding: 2rem;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-/* EMPIEZA LA REMODELACION DE MI FOOTER*/
-footer {
-  background-color: #f2f2f2;
-  padding: 20px;
-}
-
-.footer-content {
-  display: grid;
-  grid-template-columns: 1fr;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  text-align: center;
-}
-
-.social-media {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  gap: 10px;
-}
-
-@media (min-width: 370px) {
-  .footer-content {
-    grid-template-columns: 1fr;
-  }
-}
-@media (min-width: 500px) {
-  .footer-content {
-    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
-  }
-}
-@media (min-width: 1500px) {
-  .footer-content {
-    grid-template-columns: 1fr;
-  }
-}
-.formulario {
-  width: 60%;
-  padding: 2rem;
-}
-
-/* EMPIEZA LA REMODELACION DE MI carrusel*/
-.navbar-brand {
-  justify-content: start;
-}
-
-.barra-navegacion {
-  justify-content: end;
-}
-
-.form-control {
-  border-color: chocolate;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 150%;
-}
-
-.input-group-text {
-  border-color: chocolate;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 150%;
-  height: 20%;
-  padding: 2rem;
-}
-
-.ubicacion {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
-  grid-gap: 20px;
-  height: 400px;
-}
-
-.mapa {
-  display: flex;
-  justify-content: center;
-}
-
-@media (min-width: 470px) {
-  .container {
-    grid-template-columns: repeat(auto-fit, minmax(470px, 1fr));
-  }
-}
-.card-title {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.card-title {
-  color: chocolate;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-.card-text {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.card-text {
-  font-family: "Times New Roman", Times, serif;
-  font-size: 20px;
-}
-
-/* EMPIEZA LA REMODELACION DEL VIDEO */
-.carousel {
-  width: 100%;
-}
-
-@media (min-width: 370px) {
-  .video-producto {
-    font-size: 140%;
-    font-family: serif;
-    padding: 2rem;
-    gap: 1rem;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-}
-@media (min-width: 1024px) {
-  .video-producto {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-}
-/* EMPIEZA LA REMODELACION DEL GRID  COLUMNAS DEL BODY*/
-.grid-container {
-  display: grid;
-  grid-template-columns: 40% 40%;
-  grid-template-rows: 40% 40%;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  gap: 20px;
-  margin-top: 7%;
-}
-
-.grid-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(216, 214, 211);
-  padding: 30px;
-  transition: transform 0.3s;
-}
-
-.grid-item:hover {
-  transform: scale(1.2);
-}
-
-/* EMPIEZA LA REMODELACION DE LOS PRODUCTOS DE MI INICIO*/
-@media (min-width: 350px) {
-  .imagen-tarjeta {
-    width: 18rem;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    margin: 10%;
-    gap: 5%;
-  }
-}
-.carousel-slide {
-  height: 1%;
-}
-
-.conteiner-secciones {
-  padding: 2 rem;
-}
-
-.conteiner-secciones {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.conteiner-secciones img {
-  width: 95%;
-  height: 100%;
-  object-fit: cover;
-}
-
-@media (min-width: 1024px) {
-  .conteiner-secciones {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(2, minmax(400px, 30vh));
-  }
-}
-@media (min-width: 350px) {
-  .imagen-tarjeta {
-    width: 18rem;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    margin: 10%;
-    gap: 5%;
-  }
-}
-
-/*# sourceMappingURL=styles.css.map */
