--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,7 +1,7 @@
 $ff-franklin: "Franklin Gothic Medium', 'Arial Narrow", Arial, sans-serif;
 $ff-arial: "Arial, Helvetica, sans-serif";
 $ff-times:"Times New Roman", Times, serif;
-$ff-serif: "serif;" ; serif
+$ff-serif: "serif;" ,serif ;
     
 
 
