--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -12,7 +12,7 @@
 
 
         font-size: 140%;
-        font-family: serif;
+        font-family: $ff-serif;
         padding: 2rem;
         gap: 1rem;
 
