cambio en el ssc style a styles

--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -4,6 +4,15 @@
 .carousel {
 
     width: 100%;
+    
+}
+
+.carousel-item {
+    width: 100%;
+} 
+
+.visually-hidden {
+    width: 100%;
 }
 
 @media (min-width:370px) {
